added app to window and expanded character class

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
-<script src="src/js/app.js" type="module"></script>
+    <button>New Character</button>
+
+<script src="src/js/script.js" type="module"></script>
 </body>
 </html>
