added classes, styled character list, added basic  render functionality

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./src/css/app.css">
 </head>
 <body>
-    <button>New Character</button>
+    <button class="new-character">New Character</button>
+
+    <div class="character-select">
+        <div class="character">
+            <a href="">Activate</a>
+            <div class="character-name">yo mama</div>
+            <a class="terminate" href="">Terminate</a>
+        </div>
+    </div>
 
 <script src="src/js/script.js" type="module"></script>
 </body>
