finalised terminate button, added generic button class and activate button class

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="character-select">
         <div class="character">
-            <a href="">Activate</a>
+            <a class="activate" href="">Activate</a>
             <div class="character-name">yo mama</div>
             <a class="terminate" href="">Terminate</a>
         </div>
